# PenniniCup

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AUDITORIA_TECNICA.md  CALCULO.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLANO_API_FOOTBALL.md  PROCESSOS.md  README.md  REGRAS.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: main.yml  pr.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/01/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-VERIFICATION.md  PLAN.md  RESEARCH.md
.planning/02/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md
.planning/codebase/: CONVENTIONS.md  TESTING.md
docs/superpowers/plans/: 2026-05-07-supporter-star-badge.md  2026-05-24-profile-group-audit-and-knockout-colors.md  2026-06-10-navbar-palpites-ranking-tabs.md  2026-06-19-backfill-historico-ranking.md  2026-06-19-historico-rodadas-mudanca-posicao.md  2026-06-21-dashboard-evolucao-e-correcao-dados.md  2026-06-23-tipo2-mata-mata-scoring.md  2026-06-25-tipo2-mata-mata-pontuacao-por-fase.md  2026-06-29-tipo2-placar-exato-classificado-errado.md
docs/superpowers/specs/: 2026-05-07-supporter-star-badge-design.md  2026-05-24-profile-group-audit-and-knockout-colors-design.md  2026-06-10-navbar-palpites-ranking-tabs-design.md  2026-06-19-backfill-historico-ranking-design.md  2026-06-19-historico-rodadas-mudanca-posicao-design.md  2026-06-21-dashboard-evolucao-e-correcao-dados-design.md  2026-06-23-tipo2-mata-mata-scoring-design.md  2026-06-25-tipo2-mata-mata-pontuacao-por-fase-design.md  2026-06-29-tipo2-placar-exato-classificado-errado-design.md
penninibet/: manage.py
penninibet/src/: asgi.py  wsgi.py
penninibet/src/settings/: __init__.py  base.py  custom.py  envvars.py
scripts/: entrypoint.sh  production_data.py
src/: SCORE.md
src/accounts/: admin.py  apps.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
src/common/: logging_filters.py
src/config/: .django_secret_key_dev  checks.py  health.py  tests.py  urls.py
src/football/: admin.py  apps.py  models.py  signals.py  test_sync_scheduler.py  tests.py  urls.py  views.py
src/matches/: admin.py  apps.py  models.py  urls.py  views.py
src/payments/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py  webhooks.py
src/penninicup/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/pool/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/rankings/: admin.py  models.py  test_dashboard_render.py  test_divisions.py  test_divisions_context.py  test_match_guesses_render.py  tests.py  urls.py  views.py
src/templates/: 400.html  403.html  404.html  500.html  base.html  layout.html
(+182 files in other folders)
