[tool.poetry]
name = "penninibet"
version = "0.1.0"
description = ""
authors = ["Andre <andrepennini@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
psycopg2 = "^2.9.11"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
