[tool.poetry]
name = "penninibet"
version = "0.1.0"
description = ""
authors = ["Andre <andrepennini@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
psycopg2 = "^2.9.11"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.3"
python-dotenv = "^1.2.1"
djangorestframework = "^3.16.1"
django-tailwind = {extras = ["cookiecutter", "honcho", "reload"], version = "^4.4.2"}
mercadopago = "^2.3.0"
curl-cffi = "^0.14.0"
fake-useragent = "^2.2.0"
openpyxl = "^3.1.5"
pillow = "^12.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
colorlog = "^6.10.1"


[tool.ruff]
target-version = "py312"
line-length = 119
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  "__pycache__",
  "venv",
  ".venv",
  "migrations",
  "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PLE"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"src/config/settings/docker.py" = ["F821"]
"src/config/settings/envvars.py" = ["F821"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
